deployment-az2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-az2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
      zone: az2
  template:
    metadata:
      labels:
        app: hello-world
        zone: az2
    spec:
      containers:
        - name: hello-world
          image: k8s.gcr.io/echoserver:1.4
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "200m"
              memory: "400Mi"
          ports:
            - containerPort: 8080
