locust-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust-master
spec:
  type: NodePort
  ports:
    - port: 8089
      targetPort: 8089
      nodePort: 30001
  selector:
    app: locust
    role: master
