service-az1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service-az1
spec:
  selector:
    app: hello-world
    zone: az1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
