service-az2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service-az2
spec:
  selector:
    app: hello-world
    zone: az2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
