service-az3.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service-az3
spec:
  selector:
    app: hello-world
    zone: az3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
